--- a/index.html
+++ b/index.html
@@ -1,120 +1,244 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Surf school</title>
-    <link rel="stylesheet" href="./css/style.css" />
-    <link href="https://fonts.googleapis.com/css?family=Raleway:600,700&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,regular&display=swap" rel="stylesheet">
-  </head>
-  <body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Surf school</title>
+  <link href="https://fonts.googleapis.com/css?family=Raleway:600,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,regular&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="./css/style.css" />
+
+</head>
+
+<body>
 
 
 
-    <header class="header">
-      <div class="header__top">
-        <div class="container">
-          <div class="header__top-inner">
-            <a  class="logo" href="#">
-              <img class="logo" src="./images/logo.svg" alt="Логотип">
-            </a>
-            <nav class="menu">
-              <ul class="menu__list">
-                <li class="menu__list-item left__item">
-                  <a class="menu__list-link" href="#">
-                    О нас
-                  </a>
-                </li>
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Услуги
-                  </a>
-                </li>
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Стоимость
-                  </a>
-                </li>
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Блог
-                  </a>
-                </li>
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Команда
-                  </a>
-                </li>
-                <li class="menu__list-item">
-                  <a class="menu__list-link" href="#">
-                    Контакты
-                  </a>
-                </li>
-              </ul>
-            </nav>
-          </div>
+  <header class="header">
+    <div class="header__top">
+      <div class="container">
+        <div class="header__top-inner">
+          <a class="logo" href="#">
+            <img class="logo" src="./images/logo.svg" alt="Логотип">
+          </a>
+          <nav class="menu">
+            <ul class="menu__list">
+              <li class="menu__list-item left__item">
+                <a class="menu__list-link" href="#">
+                  О нас
+                </a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Услуги
+                </a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Стоимость
+                </a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Блог
+                </a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Команда
+                </a>
+              </li>
+              <li class="menu__list-item">
+                <a class="menu__list-link" href="#">
+                  Контакты
+                </a>
+              </li>
+            </ul>
+          </nav>
         </div>
       </div>
-      <div class="header__content">
-        <div class="container">
-          <div class="header__content-inner">
-            <h1 class="header__title">
-              WAWE
-            </h1>
-            <h4 class="header__subtitle">
-              Школа серфинга на канарских Островах
+    </div>
+    <div class="header__content">
+      <div class="container">
+        <div class="header__content-inner">
+          <h1 class="header__title">
+            WAWE
+          </h1>
+          <h4 class="header__subtitle">
+            Школа серфинга на канарских Островах
+          </h4>
+          <a class="header__icon" href="#">
+            <img src="./images/surf.svg" alt="surf icon">
+          </a>
+        </div>
+      </div>
+    </div>
+  </header>
+  <section class="about">
+    <div class="container">
+      <div class="about__inner">
+        <h2 class="title about__title">
+          О ШКОЛЕ, О СЕРФИНГЕ, О КАНАРАХ
+        </h2>
+        <div class="about__text">
+          <p>
+            Канарские острова не случайно называют европейскими Гавайями – это идеальное место для поклонников серфинга:
+            стабильный теплый ветер круглый год, песчаные пляжи, километры нетронутых просторов и прозрачное море. А
+            настоящей Меккой для серфингистов становится Фуэртевентура – второй по величине остров архипелага.
+          </p>
+          <p>
+            Именно здесь лучшее в Испании место, в котором можно пройти обучение серфингу. Кроме того, что зимой и
+            осенью сюда приходят огромные атлантические волны, Фуэртевентура может похвастать и множеством мелководных
+            спокойных лагун, отлично подходящих для обучения начинающих серфингистов.
+          </p>
+          <p>
+            Серфинг на Канарских островах доступен круглый год – и волны, и подходящая погода здесь есть всегда. Причем
+            волну, подходящую по уровню, сможет найти и настоящий профи, и новичок. Не случайно считается, что именно
+            это место лучше всего подойдет для обучения здесь возможно без сложностей переходить на новый уровень.
+          </p>
+          <p>
+            Перечисляя достоинства, нельзя обойти и то, что пляжи Фуэртевентуры самые протяженные на Канарах. В итоге
+            невозможно представить их переполненных туристами. Вы столкнетесь только с теми, кого,как и вас, будет
+            интересовать одна цель – обучение серфингу.
+          </p>
+          <p>
+            Перечисляя достоинства, нельзя обойти и то, что пляжи Фуэртевентуры самые протяженные на Канарах. В итоге
+            невозможно представить их переполненных туристами. Вы столкнетесь только с теми, кого,как и вас, будет
+            интересовать одна цель – обучение серфингу.
+          </p>
+          <p>
+            Четыре часа увлекательных занятий в день помогут вам уверенно покорять волны, почувствовать себя настоящим
+            серфингистом.
+          </p>
+          <p>
+            Основные достоинства нашей русской школы – высокое качество преподавания и организации занятий, безопасность
+            (все наши клиенты застрахованы в компании Allianz), отличный инвентарь и экипировка (предоставляется на весь
+            курс обучения), в том числе мягкие безопасные доски для начинающих.
+          </p>
+          <p>
+            Сначала мы определяем уровень катания и физической подготовки и только потом составляем программу
+            подготовки. И можем заверить, что после того, как закончится обучение, вы не только получите массу
+            великолепных ощущений, но и это уровень поднимется на новую ступень.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="expertise">
+    <div class="container">
+      <h2 class="title expertise__title">
+        В ШКОЛЕ ВЫ ПОЛУЧИТЕ
+      </h2>
+      <div class="expertise__items">
+        <div class="expertise__item">
+          <div class="expertise__item-sea">
+            <img src="./images/sea.svg" alt="sea">
+            <h4 class="expertise__item-title">
+              ПРОЖИВАНИЕ
             </h4>
-            <a class="header__icon" href="#">
-              <img src="./images/surf.svg" alt="surf icon">
-            </a>
           </div>
+          <p class="expertise__item-text">
+            Наша школа серфинга находится в 100 м от океанского побережья. К услугам гостей открытый бассейн и
+            бесплатный Wi-Fi. Из верхней террасы открывается вид на океан. Расстояние до центра города 15 мин.
+          </p>
+        </div>
+        <div class="expertise__item">
+          <div class="expertise__item-airplan">
+            <img src="./images/airplane.svg" alt="airplan">
+            <h4 class="expertise__item-title">
+              ПЕРЕЛЕТ И
+              СТРАХОВКУ
+            </h4>
+          </div>
+          <p class="expertise__item-text">
+            Все участники программы застрахованы страховой компанией Allianz.
+            Перелет из Тенерифе до острова Лансароте и обратно входит в стоимость программы
+          </p>
+        </div>
+        <div class="expertise__item">
+          <div class="expertise__item-wave">
+            <img src="./images/wave.svg" alt="wave">
+            <h4 class="expertise__item-title">
+              ОБУЧЕНИЕ И
+              ЭКИПИРОВКУ
+            </h4>
+          </div>
+          <p class="expertise__item-text">
+            Все оборудование и экипировка известных производителей и предоставляется на весь курс программы.
+            Тренировочный процесс начинается с определения вашего уровня катания
+          </p>
         </div>
       </div>
-    </header>
-    <section class="about">
-      <div class="container">
-        <div class="about__inner">
-          <h2 class="title about__title">
-            О  ШКОЛЕ, О СЕРФИНГЕ, О КАНАРАХ 
-          </h2>
-          <div class="about__text">
-            <p>
-              Канарские острова не случайно называют европейскими Гавайями – это идеальное место для поклонников серфинга: стабильный теплый ветер круглый год, песчаные пляжи, километры нетронутых просторов и прозрачное море. А настоящей Меккой для серфингистов становится Фуэртевентура – второй по величине остров архипелага.
-            </p>
-            <p>
-              Именно здесь лучшее в Испании место, в котором можно пройти обучение серфингу. Кроме того, что зимой и осенью сюда приходят огромные атлантические волны, Фуэртевентура может похвастать и множеством мелководных спокойных лагун, отлично подходящих для обучения начинающих серфингистов.
-            </p>
-            <p>
-              Серфинг на Канарских островах доступен круглый год – и волны, и подходящая погода здесь есть всегда. Причем волну, подходящую по уровню, сможет найти и настоящий профи, и новичок. Не случайно считается, что именно это место лучше всего подойдет для обучения здесь возможно без сложностей переходить на новый уровень.
-            </p>
-            <p>
-              Перечисляя достоинства, нельзя обойти и то, что пляжи Фуэртевентуры самые протяженные на Канарах. В итоге невозможно представить их переполненных туристами. Вы столкнетесь только с теми, кого,как и вас, будет интересовать одна цель – обучение серфингу.
-            </p>
-            <p>
-              Перечисляя достоинства, нельзя обойти и то, что пляжи Фуэртевентуры самые протяженные на Канарах. В итоге невозможно представить их переполненных туристами. Вы столкнетесь только с теми, кого,как и вас, будет интересовать одна цель – обучение серфингу.
-            </p>
-            <p>
-              Четыре часа увлекательных занятий в день помогут вам уверенно покорять волны, почувствовать себя настоящим серфингистом.
-            </p>
-            <p>
-              Основные достоинства нашей русской школы – высокое качество преподавания и организации занятий, безопасность (все наши клиенты застрахованы в компании Allianz), отличный инвентарь и экипировка (предоставляется на весь курс обучения), в том числе мягкие безопасные доски для начинающих.
-            </p>
-            <p>
-              Сначала мы определяем уровень катания и физической подготовки и только потом составляем программу подготовки. И можем заверить, что после того, как закончится обучение, вы не только получите массу великолепных ощущений, но и это уровень поднимется на новую ступень.
-            </p>
+      <div class="expertise__inner">
+        <div class="expertise__info">
+          <div class="expertise__info-item">
+            <img src="./images/smallWave.svg" alt="волна">
+            <span>85%</span>
+            Приехали второй раз
+          </div>
+          <div class="expertise__info-item">
+            <img src="./images/mediumWave.svg" alt="волна">
+            <span>95%</span>
+            Научились кататься            
+          </div>
+          <div class="expertise__info-item"> 
+            <img src="./images/largeWave.svg" alt="волна">           
+            <span>99%</span>
+            Довольных клиентов
           </div>
         </div>
+        <div class="expertise__text">
+          <p>
+            Огромным преимуществом нашей школы является собственная методика обучения. Мы разработали собственный стиль
+            обучения серфингу, который позволяет новичкам максимально быстро встать на доску.
+          </p>
+          <p>
+            Именно наша методика и наши преподаватели позволили нам пройти аттестацию Федерации серфинга Канарских
+            островов - FEDERACIÓN CANARIA DE SURF. Это означает, что наша школа соответствует всем мировым стандартам.
+            Переаттестация производится ежегодно и это позволяет нам всегда стремиться к улучшению обучения.
+          </p>
+        </div>
       </div>
-    </section>
-    <section class="expertise">
-      <div class="container">
-
+    </div>
+  </section>
+  <section class="magic">
+    <div class="container">
+      <div class="magic__inner">
+        <h2 class="title magic__title">
+          ПОКОРЯЙ ВЕРШИНЫ
+        </h2>
+        <div class="magic__text">
+          <p>
+            Преподаватели нашей школы серфинга в числе лучших серферов на Канарских островах. Среди них - чемпион Европы
+            по лонгборду, который с радостью поделится опытом как с новичками, так и более опытными серферами.
+            Все члены преподавательского состава являются сертифицированными членами Федерации серфинга Канарских
+            островов. Некоторые из них знают русский язык, что определенно позиционирует нас как русскую школу серфинга
+            за границей!
+          </p>
+          <p>
+            Весь тренерский состав регулярно участвует в семинарах и курсах повышения квалификации, которые проводятся
+            по всему миру различными известными серф-клубами и федерациями. Поэтому в нашей школе серфинга вы можете
+            быть спокойны: вас обучают лучшие тренеры!
+          </p>
+          <p>
+            Методика обучения серфингу рассчитана как на новичков, на серферов среднего уровня, так и на серферов уровня
+            ТОП. Тренеры находят подход к каждому, несмотря на то, что обучение серфингу в нашей школе производится в
+            группах. Однако, мы предлагаем персональные уроки серфинга - только вы и тренер! П
+          </p>
+        </div>
       </div>
-    </section>
-    
+    </div>
+  </section>
 
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./js/main.js"></script>
-  </body>
+
+
+
+
+
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+  <script src="./js/main.js"></script>
+</body>
+
 </html>
