--- a/index.html
+++ b/index.html
@@ -414,6 +414,28 @@
       </div>
     </div>
   </section>
+  <section class="team">
+    <div class="container">
+      <h2 class="title team__title">НАША КОМАНДА</h2>
+      <div class="team__items">
+        <div class="team__item">
+          <img src="./images/team-1.jpg" alt="Mike">
+          <h6 class="team__name">Mike</h6>
+          <p class="team__position">Главный инстуктор</p>
+        </div>
+        <div class="team__item">
+          <img src="./images/team-2.jpg" alt="Mary">
+          <h6 class="team__name">Mary</h6>
+          <p class="team__position">инстуктор</p>
+        </div>
+        <div class="team__item">
+          <img src="./images/team-3.jpg" alt="Olga">
+          <h6 class="team__name">Ольга</h6>
+          <p class="team__position">инстуктор</p>
+        </div>
+      </div>     
+    </div>
+  </section>
 
 
 
