--- a/index.html
+++ b/index.html
@@ -433,7 +433,59 @@
           <h6 class="team__name">Ольга</h6>
           <p class="team__position">инстуктор</p>
         </div>
-      </div>     
+      </div>
+    </div>
+  </section>
+  <section class="pricing">
+    <div class="container">
+      <h2 class="title pricing__title">ПАКЕТЫ УСЛУГ</h2>
+      <div class="pricing__items">
+        <ul class="pricing__item">
+          <h4 class="pricing__item-title">Стандарт</h4>
+          <li>Проживание на вилле 6 ночей </li>
+          <li>Номер категории стандарт</li>
+          <li>Экипировка для обучения</li>
+          <li>Обучение серфингу 5 тренировок по 2 часа</li>
+          <li>Страховка</li>
+          <li>Вечеринка с угощениями и дискотекой</li>
+          <li class="pricing__item-num first">
+            450
+            <span>$</span>
+          </li>
+
+        </ul>
+        <ul class="pricing__item">
+          <h4 class="pricing__item-title">Все включено</h4>
+          <li>Проживание на вилле 6 ночей </li>
+          <li>Номер категории люкс</li>
+          <li>Экипировка для обучения</li>
+          <li>Обучение серфингу 8 тренировок по 2 часа</li>
+          <li>Страховка</li>
+          <li>Вечеринка с угощениями и дискотекой</li>
+          <li>Авиа перелет Тенерифе -Лансароте - Тенерифе </li>
+          <li  >Завтраки на вилле</li>
+          <li class="pricing__item-num">
+            950
+            <span>$</span>
+          </li>
+        </ul>
+        <ul class="pricing__item">
+          <h4 class="pricing__item-title">Профи</h4>
+          <li>Проживание на вилле 8 ночей</li>
+          <li>Номер категории люкс</li>
+          <li>Экипировка для обучения</li>
+          <li>Обучение серфингу 16 тренировок по 2 часа</li>
+          <li>Страховка</li>
+          <li>Вечеринка с угощениями и дискотекой</li>
+          <li>Авиа перелет Тенерифе -Лансароте - Тенерифе </li>
+          <li>Завтраки и ужины на вилле</li>
+          <li class="pricing__item-num">
+            1450
+            <span>$</span>
+          </li>
+        </ul>
+      </div>
+
     </div>
   </section>
 
