--- a/index.html
+++ b/index.html
@@ -452,7 +452,6 @@
             450
             <span>$</span>
           </li>
-
         </ul>
         <ul class="pricing__item">
           <h4 class="pricing__item-title">Все включено</h4>
@@ -463,7 +462,7 @@
           <li>Страховка</li>
           <li>Вечеринка с угощениями и дискотекой</li>
           <li>Авиа перелет Тенерифе -Лансароте - Тенерифе </li>
-          <li  >Завтраки на вилле</li>
+          <li>Завтраки на вилле</li>
           <li class="pricing__item-num">
             950
             <span>$</span>
@@ -485,9 +484,57 @@
           </li>
         </ul>
       </div>
+    </div>
+  </section>
+  <section class="connection">
+    <div class="connection__map">
+      <img src="./images/map-bg.jpg" alt="map">
+    </div>
+    <div class="container">
+      <h2 class="title connection__title">ОСТАВИТЬ ЗАЯВКУ</h2>
+      <div class="connection__inner">
+        <form class="connection__inner-form">
+          <input type="text" placeholder="Имя">
+          <input type="text" placeholder="Телефон">
+          <textarea placeholder="Оставьте сообщение, и мы свяжемся с Вами в ближайшее время"></textarea>
+          <button type="submit">ОТПРАВИТЬ</button>
+        </form>
+
+        <ul class="connection__inner-adres">
+          <li>
+            <p>
+              Есть вопрос?
+              Вы можете связаться
+            </p>
+          </li>
+          <li>
+            <p>
+              WhatsApp, Viber, Telegram 
+              +3 467 486-37-88
+            </p>
+          </li>
+          <li>
+            <p>
+              Avenida grandes playas 79, 
+              Corralejo la Oliva Fuerteventura,
+              Spain. 35660
+            </p>
+          </li>
+        </ul>
+      </div>
+
+      <div class="connection__inner-social">
+        <a href="">INSTAGRAM</a>
+        <a href="">FACEBOOK</a>
+        <a href="">YOUTUBE</a>
+      </div>
+    </div>
+
 
     </div>
   </section>
+
+
 
 
 
