--- a/index.html
+++ b/index.html
@@ -533,6 +533,9 @@
 
     </div>
   </section>
+  <footer class="footer">
+    <img class="footer__logo" src="./images/logo.svg" alt="logo">
+  </footer>
 
 
 
