--- a/index.html
+++ b/index.html
@@ -10,13 +10,10 @@
   <link rel="stylesheet" href="./css/jquery.fancybox.min.css" />
   <link rel="stylesheet" href="./css/slick.css" />
   <link rel="stylesheet" href="./css/style.css" />
-
 </head>
 
 <body>
-
-
-
+  
   <header class="header">
     <div class="header__top">
       <div class="container">
@@ -499,43 +496,37 @@
           <textarea placeholder="Оставьте сообщение, и мы свяжемся с Вами в ближайшее время"></textarea>
           <button type="submit">ОТПРАВИТЬ</button>
         </form>
-
-        <ul class="connection__inner-adres">
-          <li>
+        <div class="footer__contact">
+          <div class="footer__contact-list">
+            Есть вопрос?
+            Вы можете связаться с нами:
+          </div>
+          <div class="footer__contact-list">
             <p>
-              Есть вопрос?
-              Вы можете связаться
+              WhatsApp, Viber, Telegram
             </p>
-          </li>
-          <li>
-            <p>
-              WhatsApp, Viber, Telegram 
-              +3 467 486-37-88
-            </p>
-          </li>
-          <li>
-            <p>
-              Avenida grandes playas 79, 
+            <a class="phone" href="+34674863788">+3 467 486-37-88</a>
+          </div>
+          <div class="footer__contact-list">
+            <adres class="adres">
+              Avenida grandes playas 79,
               Corralejo la Oliva Fuerteventura,
               Spain. 35660
-            </p>
-          </li>
-        </ul>
+            </adres>
+          </div>
+        </div>
       </div>
-
       <div class="connection__inner-social">
         <a href="">INSTAGRAM</a>
         <a href="">FACEBOOK</a>
         <a href="">YOUTUBE</a>
       </div>
     </div>
-
-
-    </div>
   </section>
   <footer class="footer">
     <img class="footer__logo" src="./images/logo.svg" alt="logo">
   </footer>
+
 
 
 
